feat: :sparkles: Finalizacion del Cronometro
Finalizaj¿ion del Cronometro

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +14,9 @@
         </div>
         <div class="boton">
             <button class="verde" id="comenzar">&#x25B6; </button>
-            <button class="rojo"><img src="images/repetir (1).png"  class="repetir" id="reiniciar"> </button>
+            <button class="rojo">
+                <img src="./images/repeat.png"  class="repetir" id="reiniciar"> 
+            </button>
         </div>
     </div>
 </body>
