--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="cronometro">
-        <div class="cronometro" id="numeros">
-            00:00:00
+    <div class="cronometroP">
+        <div id="numeros">
+            <h1>00:00:00</h1>
         </div>
-        <div class="cronometro" id="botones">
-        <button></button>
-        <button></button>
+        <div class="boton">
+            <button class="verde" id="comenzar">&#x25B6; </button>
+            <button class="rojo"><img src="images/repetir (1).png"  class="repetir" id="reiniciar"> </button>
         </div>
-    </div>    
-    <script src="js/main.js" defer></script>
+    </div>
 </body>
 </html>
